Fixed Done Button Overlap

--- a/website/static/css/main_home_dash.css
+++ b/website/static/css/main_home_dash.css
@@ -373,6 +373,8 @@ gap:10px;
 	user-select:none;
 	pointer-events:none;
 	opacity:0;	
+	height:0px;
+	display:none;
 }
 
 
@@ -382,6 +384,7 @@ gap:10px;
 	pointer-events:all;
 	animation:none;
 	opacity:1;	
+	display:flex;
 }
 
 
